--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="ptBR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>sobre mim</title>
+</head>
+<body>
+    <h1>lucas</h1>
+<p>tenho 17 anos e gosto de mecher com carro preparado</p>
+<h2>meus melhores amigos sao vt, mt, mt, joaoh2
 
+
+
+</body>
+</html>
